// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`item-bank · 문항 검색(search.php) > 경계값 — 난이도 상한 명시(빈 값일 때의 제외와 대조): level=5 (BR-14, BR-13) 1`] = `
{
  "count": 6,
  "message": null,
  "rows": [
    {
      "id": 24,
      "level": 5,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분수 덧셈과 뺄셈 혼합 계산",
      "unit": "M5-1",
    },
    {
      "id": 25,
      "level": 5,
      "tags": [
        "문장제",
        "서술형",
      ],
      "title": "분수의 곱셈 서술형",
      "unit": "M5-2",
    },
    {
      "id": 26,
      "level": 5,
      "tags": [
        "서술형",
      ],
      "title": "소수 곱셈의 추론",
      "unit": "M5-3",
    },
    {
      "id": 27,
      "level": 5,
      "tags": [
        "개념",
        "서술형",
      ],
      "title": "분수 나눗셈의 원리",
      "unit": "M6-1",
    },
    {
      "id": 28,
      "level": 5,
      "tags": [
        "문장제",
        "오답률높음",
        "서술형",
      ],
      "title": "비율 문제 종합",
      "unit": "M6-2",
    },
    {
      "id": 29,
      "level": 5,
      "tags": [
        "계산",
      ],
      "title": "대분수의 나눗셈",
      "unit": "M6-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 — 난이도 하한: level=1 (BR-14) 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 — 키워드 100자(자르기 임계값 바로 아래): q 100자 (BR-10) 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 — 키워드 101자(자르기 임계값을 1자 넘김): q 101자 (BR-10) 1`] = `
{
  "count": 0,
  "message": "키워드가 너무 길어 100자까지만 사용했습니다.
검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 — 페이지 상한: page=999 (BR-23) 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 빈값·누락 — 단원 파라미터 빈 문자열: unit= (BR-11) 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 빈값·누락 — 파라미터 전체 누락: 기본값 조합 (BR-13, BR-18, BR-23) 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상한 값 — 아주 긴 키워드(500자): q 500자 (BR-10) 1`] = `
{
  "count": 0,
  "message": "키워드가 너무 길어 100자까지만 사용했습니다.
검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상한 값 — 음수 페이지: page=-5 (BR-23) 1`] = `
{
  "count": 20,
  "message": "페이지 번호가 올바르지 않아 1페이지를 표시합니다.",
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상한 값 — 존재하지 않는 단원 코드: unit=M7-1 (BR-11) 1`] = `
{
  "count": 0,
  "message": "등록되지 않은 단원 코드입니다: M7-1
검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 — 단원과 난이도 조합: unit=M5-1&level=3 (BR-11, BR-14, BR-26) 1`] = `
{
  "count": 1,
  "message": null,
  "rows": [
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 — 키워드 검색: q=분수 (BR-09, BR-24) 1`] = `
{
  "count": 13,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 — 태그와 정렬 조합: tag=오답률높음&sort=level (BR-16, BR-20) 1`] = `
{
  "count": 4,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;
